0025867: Visualization, TKOpenGl - fix misprint in transformation persistence math

Added test case